--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -12,8 +12,8 @@
   color: $title-text-color;
 }
 .clients {
-  display: inline-flex;
-  justify-content: space-between;
+  // display: inline-flex;
+  // justify-content: space-between;
   padding-top: 50px;
 }
 .clients-list:not(:last-child) {
