--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -324,7 +324,6 @@ p {
 }
 
 .container {
-  width: 1200px;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -421,7 +420,6 @@ p {
   color: #2196f3;
 }
 
-/*Site nav*/
 .main-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -429,111 +427,10 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.site-nav .item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.site-nav .link {
-  display: block;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: #212121;
-  font-family: Roboto;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
-
-.site-nav .link:hover, .site-nav .link:focus {
-  color: #2196f3;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-nav .link.current {
-  position: relative;
-  color: #2196f3;
-}
-
-.site-nav .current::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: #2196f3;
-  border-radius: 2px;
-}
-
-.auth-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.auth-nav .item + .item {
-  margin-left: 50px;
-}
-
-.envelope,
-.smartphone {
-  margin-right: 10px;
-  fill: #757575;
-}
-
-.auth-nav .link {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: #757575;
-  font-size: 14px;
-  line-height: 16px;
-}
-
-.auth-nav .link:hover, .auth-nav .link:focus {
-  color: #2196f3;
-  fill: #2196f3;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.auth-nav .link:hover .envelope,
-.auth-nav .link:focus .envelope,
-.auth-nav .link:hover .smartphone,
-.auth-nav .link:focus .smartphone {
-  color: #2196f3;
-  fill: #2196f3;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.item-mail > .link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 60px;
 }
 
 .projects-container {
@@ -713,18 +610,6 @@ section {
   margin: 0;
 }
 
-.footer .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
 .contacte {
   margin-top: 20px;
 }
@@ -825,9 +710,6 @@ section {
 
 .subscription-btns {
   margin-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .subscription input {
