--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -11,11 +11,11 @@
   color: $primary-bg-color;
   margin: 0;
 }
-.footer .container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+// .footer .container {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+// }
 .contacte {
   margin-top: 20px;
 }
@@ -95,7 +95,7 @@
 }
 .subscription-btns {
   margin-top: 20px;
-  display: flex;
+  // display: flex;
 }
 
 .subscription input {
