--- a/sass/components/_workes.scss
+++ b/sass/components/_workes.scss
@@ -1,9 +1,9 @@
 .workes-container {
   padding-bottom: 94px;
 }
-.workes {
-  display: flex;
-}
+// .workes {
+//   display: flex;
+// }
 .workes .item:not(:last-of-type) {
   margin-right: 30px;
 }
