--- a/css/main.css
+++ b/css/main.css
@@ -330,6 +330,24 @@ p {
   margin-left: auto;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 /* roboto-regular - latin_cyrillic */
 @font-face {
   font-family: "Roboto";
@@ -493,6 +511,16 @@ p {
   margin-left: -15px;
 }
 
+@media screen and (min-width: 768px) {
+  .features {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .features-icon {
   width: 270px;
   padding-top: 15px;
@@ -536,12 +564,6 @@ p {
   padding-bottom: 94px;
 }
 
-.workes {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 .workes .item:not(:last-of-type) {
   margin-right: 30px;
 }
@@ -582,6 +604,16 @@ p {
   margin-right: auto;
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+@media screen and (min-width: 768px) {
+  .team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .team .item:not(:last-of-type) {
@@ -682,6 +714,16 @@ p {
   padding-top: 50px;
 }
 
+@media screen and (min-width: 768px) {
+  .clients {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .clients-list:not(:last-child) {
   margin-right: 30px;
 }
@@ -757,6 +799,16 @@ p {
   display: block;
   color: #ffffff;
   margin: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .footer .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .contacte {
