--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -15,6 +15,11 @@
   // display: inline-flex;
   // justify-content: space-between;
   padding-top: 50px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 .clients-list:not(:last-child) {
   margin-right: 30px;
