--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -11,11 +11,16 @@
   color: $primary-bg-color;
   margin: 0;
 }
-// .footer .container {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-// }
+.footer .container {
+  // display: flex;
+  // align-items: center;
+  // justify-content: space-between;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
 .contacte {
   margin-top: 20px;
 }
