--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -4,8 +4,14 @@
 }
 .buttons {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  // justify-content: center;
   padding-bottom: 56px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+  }
 }
 .btn {
   display: inline-block;
@@ -38,13 +44,18 @@
 }
 
 .projects {
-  display: flex;
-  flex-wrap: wrap;
+  // display: flex;
+  // flex-wrap: wrap;
   margin: -15px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 .project-card {
   width: 370px;
-  margin: 15px;
+  // margin: 15px;
   /* flex-basis: calc(100% / 3-15px); */
 }
 .project-info {
