--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -6,9 +6,14 @@
   padding-top: 94px;
   padding-bottom: 94px;
 }
-// .team {
-//   display: flex;
-// }
+.team {
+  // display: flex;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
 .team .item:not(:last-of-type) {
   margin-right: 30px;
 }
