--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,6 +5,8 @@
   margin-right: auto;
   margin-left: auto;
 
+  outline: 3px solid red;
+
   // MOBILE
   @media screen and (min-width: 480px) {
     width: 480px;
