--- a/css/main.css
+++ b/css/main.css
@@ -292,6 +292,10 @@ body {
   margin: 0;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 ul {
   list-style: none;
   padding: 0;
@@ -328,6 +332,7 @@ p {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  outline: 3px solid red;
 }
 
 @media screen and (min-width: 480px) {
@@ -425,6 +430,10 @@ p {
   /* Legacy iOS */
 }
 
+header {
+  position: relative;
+}
+
 .logo {
   margin-right: 93px;
   color: #000000;
@@ -452,24 +461,8 @@ p {
 }
 
 /*Site nav*/
-.site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-@media screen and (max-width: 767px) {
-  .site-nav {
-    display: none;
-  }
-}
-
-.site-nav .item:not(:last-child) {
-  margin-right: 50px;
-}
-
 .site-nav .link {
-  display: block;
+  display: inline-block;
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
@@ -507,29 +500,10 @@ p {
 }
 
 .auth-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-left: auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-@media screen and (max-width: 767px) {
-  .auth-nav {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .auth-nav {
-    display: block;
-  }
-}
-
-.auth-nav .item + .item {
-  margin-left: 50px;
 }
 
 .envelope,
@@ -1151,6 +1125,14 @@ p {
   opacity: 1;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 93px 15px;
+  overflow-y: scroll;
+}
+
+@media screen and (min-width: 768px) {
+  .backdrop {
+    padding: 208px 159px;
+  }
 }
 
 .backdrop.is-hidden {
@@ -1164,21 +1146,28 @@ p {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  min-width: 528px;
+  min-width: 100%;
   min-height: 581px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    max-width: 450px;
+    width: 100%;
+  }
 }
 
 .btn-modal {
@@ -1491,7 +1480,7 @@ textarea:focus {
 
 .mobile-menu .content {
   height: 100%;
-  background-color: #fff;
+  background-color: red;
   width: 70%;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
@@ -1535,7 +1524,7 @@ textarea:focus {
 }
 
 .menu-container {
-  background-color: palegoldenrod;
+  background-color: #ffffff;
   padding: 20px;
   text-align: center;
   font-size: 20px;
@@ -1566,12 +1555,6 @@ textarea:focus {
         -ms-flex-positive: 1;
             flex-grow: 1;
   }
-}
-
-.navigation,
-.contacts {
-  height: 50px;
-  width: 140px;
 }
 
 .navigation {
