--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,4 +1,7 @@
 // Header
+header {
+  position: relative;
+}
 // Logo
 .logo {
   margin-right: 93px;
@@ -22,18 +25,17 @@
 
 /*Site nav*/
 .site-nav {
-  display: flex;
+  // display: flex;
 
   @media screen and (max-width: 767px) {
-    display: none;
   }
 }
 
-.site-nav .item:not(:last-child) {
-  margin-right: 50px;
-}
+// .site-nav .item:not(:last-child) {
+//   margin-right: 50px;
+// }
 .site-nav .link {
-  display: block;
+  display: inline-block;
   align-items: baseline;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -71,21 +73,21 @@
 }
 
 .auth-nav {
-  display: flex;
+  // display: flex;
   margin-left: auto;
   align-items: center;
 
-  @media screen and (max-width: 767px) {
-    display: none;
-  }
+  // @media screen and (max-width: 767px) {
+  //   display: none;
+  // }
 
-  @media screen and (min-width: 768px) {
-    display: block;
-  }
+  // @media screen and (min-width: 768px) {
+  //   display: block;
+  // }
 }
-.auth-nav .item + .item {
-  margin-left: 50px;
-}
+// .auth-nav .item + .item {
+//   margin-left: 50px;
+// }
 .envelope,
 .smartphone {
   margin-right: 10px;
