--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -22,7 +22,7 @@
 
 .mobile-menu .content {
   height: 100%;
-  background-color: #fff;
+  background-color: red;
   width: 70%;
 
   transform: translateX(-100%);
@@ -59,7 +59,7 @@
 }
 
 .menu-container {
-  background-color: palegoldenrod;
+  background-color: $primary-bg-color;
   padding: 20px;
   text-align: center;
   font-size: 20px;
@@ -81,12 +81,6 @@
     justify-content: space-between;
     flex-grow: 1;
   }
-}
-
-.navigation,
-.contacts {
-  height: 50px;
-  width: 140px;
 }
 
 .navigation {
