--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,6 +8,13 @@
 
   opacity: 1;
   transition: opacity 250ms $timing-function;
+
+  padding: 93px 15px;
+
+  overflow-y: scroll;
+  @media screen and (min-width: 768px) {
+    padding: 208px 159px;
+  }
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -17,13 +24,18 @@
   transform: translate(-50%, -50%) scale(0.9);
 }
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms $timing-function;
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms $timing-function;
 
-  min-width: 528px;
+    max-width: 450px;
+    width: 100%;
+  }
+
+  min-width: 100%;
   min-height: 581px;
   background-color: $primary-bg-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -48,9 +60,9 @@
   transition: fill 250ms $timing-function;
 
   &:hover,
-&:focus {
-  fill: $accent-color;
-}
+  &:focus {
+    fill: $accent-color;
+  }
 }
 
 .form {
@@ -235,13 +247,12 @@ textarea:focus {
   cursor: pointer;
 
   &:hover,
-&:focus {
-  background: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  &:focus {
+    background: #188ce8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+  }
+  &:focus {
+    outline: none;
+  }
 }
-&:focus {
-  outline: none;
-}
-}
-
