--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -4,6 +4,8 @@
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  padding-top: 94px;
+  padding-bottom: 94px;
 
   outline: 3px solid red;
 
