--- a/css/main.css
+++ b/css/main.css
@@ -332,6 +332,8 @@ p {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  padding-top: 94px;
+  padding-bottom: 94px;
   outline: 3px solid red;
 }
 
@@ -432,6 +434,10 @@ p {
 
 header {
   position: relative;
+  padding-right: 10px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .logo {
@@ -599,11 +605,6 @@ header {
   outline: none;
 }
 
-.features-container {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .features {
   margin-right: -15px;
   margin-left: -15px;
@@ -662,6 +663,12 @@ header {
   padding-bottom: 94px;
 }
 
+@media screen and (max-width: 767px) {
+  .workes-container {
+    display: none;
+  }
+}
+
 .workes .item:not(:last-of-type) {
   margin-right: 30px;
 }
@@ -700,8 +707,6 @@ header {
   /* width: 1600px; */
   margin-left: auto;
   margin-right: auto;
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 @media screen and (min-width: 768px) {
@@ -794,11 +799,6 @@ header {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-container {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .clients-title {
   font-weight: bold;
   font-size: 36px;
@@ -887,6 +887,8 @@ header {
 .footer {
   background-color: #2f303a;
   /* width: 1600px; */
+  padding-right: 15px;
+  right: 15px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
@@ -1455,44 +1457,6 @@ textarea:focus {
 
 .form-btn:focus {
   outline: none;
-}
-
-.mobile-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  -webkit-transition: opacity 250ms linear, visibility 250ms linear;
-  transition: opacity 250ms linear, visibility 250ms linear;
-}
-
-.mobile-menu.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: initial;
-}
-
-.mobile-menu .content {
-  height: 100%;
-  background-color: red;
-  width: 70%;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
-  -webkit-transition: -webkit-transform 250ms linear 250ms;
-  transition: -webkit-transform 250ms linear 250ms;
-  transition: transform 250ms linear 250ms;
-  transition: transform 250ms linear 250ms, -webkit-transform 250ms linear 250ms;
-}
-
-.mobile-menu.is-open .content {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
 }
 
 .menu-button {
