--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -332,6 +332,8 @@ p {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  padding-top: 94px;
+  padding-bottom: 94px;
   outline: 3px solid red;
 }
 
@@ -432,6 +434,10 @@ p {
 
 header {
   position: relative;
+  padding-right: 10px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .logo {
@@ -728,6 +734,8 @@ section {
 .footer {
   background-color: #2f303a;
   /* width: 1600px; */
+  padding-right: 15px;
+  right: 15px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
@@ -954,44 +962,6 @@ section {
   height: 24px;
   width: 24px;
   margin-left: 10px;
-}
-
-.mobile-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  -webkit-transition: opacity 250ms linear, visibility 250ms linear;
-  transition: opacity 250ms linear, visibility 250ms linear;
-}
-
-.mobile-menu.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: initial;
-}
-
-.mobile-menu .content {
-  height: 100%;
-  background-color: red;
-  width: 70%;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
-  -webkit-transition: -webkit-transform 250ms linear 250ms;
-  transition: -webkit-transform 250ms linear 250ms;
-  transition: transform 250ms linear 250ms;
-  transition: transform 250ms linear 250ms, -webkit-transform 250ms linear 250ms;
-}
-
-.mobile-menu.is-open .content {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
 }
 
 .menu-button {
