--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,8 @@
 .footer {
   background-color: $bg-color;
   /* width: 1600px; */
+  padding-right: 15px;
+  right: 15px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
