--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,11 @@
 // Header
 header {
   position: relative;
+
+  padding-right: 10px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 // Logo
 .logo {
