--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -346,6 +346,8 @@ img {
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
 
