--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -12,6 +12,8 @@
   // MOBILE
   @media screen and (min-width: 480px) {
     width: 480px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 
   // TABLET
