--- a/css/main.css
+++ b/css/main.css
@@ -338,8 +338,6 @@ img {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  padding-top: 94px;
-  padding-bottom: 94px;
   outline: 3px solid red;
 }
 
@@ -360,6 +358,8 @@ img {
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -665,11 +665,6 @@ header {
   }
 }
 
-.features {
-  margin-right: -15px;
-  margin-left: -15px;
-}
-
 @media screen and (min-width: 768px) {
   .features {
     display: -webkit-box;
@@ -681,9 +676,9 @@ header {
 }
 
 .features-icon {
-  width: 270px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  width: 450px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   border: 1px solid transparent;
   border-radius: 4px;
   background-color: #f5f4fa;
@@ -698,15 +693,19 @@ header {
           justify-content: center;
 }
 
-.features .item {
-  width: 270px;
-  margin-right: 15px;
-  margin-left: 15px;
+.features-item:not(:last-child) {
+  margin-bottom: 30px;
 }
 
 .features-title {
   margin-top: 30px;
   margin-bottom: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   color: #212121;
   font-weight: 700;
   font-size: 14px;
