--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -45,16 +45,24 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*Section*/
 .section-title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
+
+  text-align: center;
+  letter-spacing: 0.03em;
 
   color: $title-text-color;
-
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
+  // margin-bottom: 50px;
+  // font-size: 36px;
 }
