--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,8 +1,6 @@
 .team-container {
   background: $btn-color;
   /* width: 1600px; */
-  margin-left: auto;
-  margin-right: auto;
 }
 .team {
   // display: flex;
@@ -12,38 +10,54 @@
     flex-wrap: wrap;
   }
 }
-.team .item:not(:last-of-type) {
-  margin-right: 30px;
-}
-.team .item {
-  width: 270px;
-  padding-bottom: 30px;
+// .team .item:not(:last-of-type) {
+//   margin-right: 30px;
+// }
+.team-item {
+  width: 450px;
+  padding-bottom: 24px;
+  // width: 270px;
+  // padding-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: $primary-bg-color;
+}
+.team-item:not(:last-child) {
+  margin-bottom: 30px;
 }
 .team-title {
   margin-top: 30px;
   margin-bottom: 10px;
 
   color: $title-text-color;
+  font-family: Roboto;
+  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
+  letter-spacing: 0.03em;
 }
 .team-text {
   margin-bottom: 16px;
 
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
+  letter-spacing: 0.03em;
 }
 .social {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  // justify-content: space-evenly;
   height: 44px;
+}
+.social-item:not(:last-child) {
+  margin-right: 10px;
 }
 .instagram,
 .twitter,
