--- a/css/main.css
+++ b/css/main.css
@@ -972,45 +972,64 @@ header {
   padding-bottom: 60px;
 }
 
+.footer-content {
+  margin-bottom: 60px;
+}
+
+.footer-logo {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
 .footer-content a {
   color: #ffffff;
-}
-
-@media screen and (min-width: 768px) {
-  .footer .container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-}
-
-.contacte {
-  margin-top: 20px;
-}
-
-.contacte .item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-right: 0;
 }
 
 .footer span {
   color: #2196f3;
 }
 
+.contacte {
+  margin-top: 20px;
+}
+
+.contacte-item {
+  max-width: 100%;
+}
+
+.contacte-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
 .address-link {
+  font-family: Roboto;
   font-style: normal;
+  font-weight: normal;
   font-size: 14px;
+  line-height: 1.71;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .footer-link {
   opacity: 0.6;
+  font-family: Roboto;
   font-style: normal;
+  font-weight: normal;
   font-size: 14px;
+  line-height: 1.71;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .resources {
-  display: inline-block;
+  margin-bottom: 60px;
 }
 
 .resources-title {
@@ -1021,7 +1040,6 @@ header {
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
-  padding: 0;
 }
 
 .resources-list {
@@ -1076,9 +1094,11 @@ header {
 }
 
 .subscription-text {
+  font-family: Roboto;
+  font-style: normal;
   font-weight: bold;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
@@ -1093,7 +1113,7 @@ header {
   margin-right: 12px;
   font-size: 16px;
   line-height: 1.25;
-  width: 358px;
+  width: 450px;
   color: #ffffff;
   font-weight: 400;
   background-color: #2f303a;
@@ -1166,6 +1186,7 @@ header {
   position: relative;
   width: 200px;
   padding: 10px 10px 10px 29px;
+  margin-top: 20px;
   background-color: #2196f3;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
