--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,21 +2,35 @@
 header {
   position: relative;
 
-  padding-right: 10px;
+  padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
 // Logo
 .logo {
-  margin-right: 93px;
-
   color: $logo-color;
 
   font-family: Raleway, sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+
+  @media screen and (max-width: 767px) {
+    padding-bottom: 16px;
+    padding-top: 16px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-right: 88px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 .logo span {
   color: $accent-color;
@@ -25,40 +39,55 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-height: 60px;
 }
-
 /*Site nav*/
 .site-nav {
-  // display: flex;
+  color: $title-text-color;
 
   @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+  @media screen and (min-width: 1200px) {
   }
 }
-
-// .site-nav .item:not(:last-child) {
-//   margin-right: 50px;
-// }
 .site-nav .link {
-  display: inline-block;
-  align-items: baseline;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  @media screen and (max-width: 767px) {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.17;
 
-  color: $title-text-color;
-  font-family: Roboto;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+    letter-spacing: 0.02em;
+  }
+  @media screen and (min-width: 768px) {
+    display: inline-block;
 
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    font-size: 14px;
+    line-height: 1.14;
+  }
+  @media screen and (min-width: 1200px) {
+  }
   &:hover,
   &:focus {
     color: $accent-color;
     transition: color 250ms $timing-function;
   }
 }
-
+.site-nav .item:not(:last-child) {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 40px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-right: 50px;
+  }
+}
 .site-nav .link.current {
   position: relative;
   color: $accent-color;
@@ -68,52 +97,66 @@ header {
 
   position: absolute;
   left: 0;
-  bottom: 0;
+  // bottom: 0;
+  margin-top: 8px;
 
   display: block;
   width: 100%;
   height: 4px;
   background-color: $accent-color;
   border-radius: 2px;
-}
 
+  @media screen and (min-width: 768px) {
+    bottom: 0;
+    margin-top: 0;
+  }
+}
+// Auth-nav
 .auth-nav {
-  // display: flex;
   margin-left: auto;
   align-items: center;
 
-  // @media screen and (max-width: 767px) {
-  //   display: none;
-  // }
+  @media screen and (min-width: 768px) {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
 
-  // @media screen and (min-width: 768px) {
-  //   display: block;
-  // }
-}
-// .auth-nav .item + .item {
-//   margin-left: 50px;
-// }
-.envelope,
-.smartphone {
-  margin-right: 10px;
-  fill: $primary-text-color;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 .auth-nav .link {
-  padding-top: 32px;
-  padding-bottom: 32px;
-
   color: $primary-text-color;
+  @media screen and (max-width: 767px) {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.17;
 
-  font-size: 14px;
-  line-height: 16px;
+    letter-spacing: 0.02em;
+    align-items: baseline;
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+    align-content: center;
 
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    font-size: 14px;
+    line-height: 1.14;
+  }
   &:hover,
   &:focus {
     color: $accent-color;
     fill: $accent-color;
     transition: color 250ms $timing-function, fill 250ms $timing-function;
   }
-
   &:hover .envelope,
   &:focus .envelope,
   &:hover .smartphone,
@@ -123,8 +166,26 @@ header {
     transition: color 250ms $timing-function, fill 250ms $timing-function;
   }
 }
-.item-mail > .link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.envelope,
+.smartphone {
+  margin-right: 10px;
+  fill: $primary-text-color;
+}
+.item-mail {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 16px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .envelope {
+    width: 14px;
+    height: 10px;
+  }
+  .smartphone {
+    width: 10px;
+    height: 14px;
+  }
 }
