--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -21,6 +21,10 @@
     padding-top: 118px;
     padding-bottom: 118px;
   }
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 @media screen and (min-device-pixel-ratio: 2),
