--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -54,6 +54,8 @@ header {
   }
 }
 .site-nav .link {
+  color: $title-text-color;
+
   @media screen and (max-width: 767px) {
     font-family: Roboto;
     font-style: normal;
@@ -64,7 +66,8 @@ header {
     letter-spacing: 0.02em;
   }
   @media screen and (min-width: 768px) {
-    display: inline-block;
+    display: block;
+    align-items: baseline;
 
     padding-top: 32px;
     padding-bottom: 32px;
@@ -123,6 +126,8 @@ header {
 
   @media screen and (min-width: 1200px) {
     display: flex;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 .auth-nav .link {
