--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,36 +1,68 @@
 .features {
-  // display: block;
-  // justify-content: center;
-  // align-items: center;
-  // margin-right: -15px;
-  // margin-left: -15px;
-
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    margin-right: -15px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-right: 0;
+  }
+}
+.features-item {
+  // display: flex;
+  // flex-wrap: wrap;
+
+  margin-right: 30px;
+  margin-bottom: 30px;
+
+  width: 100%;
+
+  &:nth-last-child(-n + 1) {
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 30px) / 2);
+    margin-right: 15px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-child(n + 3) {
+      margin-bottom: 0;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 90px) / 4);
+    margin-right: 30px;
+    margin-bottom: 0;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 .features-icon {
-  width: 450px;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  // width: 270px;
-  // padding-top: 15px;
-  // padding-bottom: 15px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  background-color: $btn-color;
+  // min-width: 450px;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.features-item:not(:last-child) {
-  margin-bottom: 30px;
-  // width: 270px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 
-  // margin-right: 15px;
-  // margin-left: 15px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  background-color: $btn-color;
 }
+// .features-item:not(:last-child) {
+//   margin-bottom: 30px;
+//   // width: 270px;
+
+//   // margin-right: 15px;
+//   // margin-left: 15px;
+// }
 .features-title {
   margin-top: 30px;
   margin-bottom: 10px;
