--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -63,6 +63,10 @@ img {
   letter-spacing: 0.03em;
 
   color: $title-text-color;
-  // margin-bottom: 50px;
-  // font-size: 36px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
+  }
 }
