--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -885,7 +885,7 @@ section {
 
 .footer {
   background-color: #2f303a;
-  /* width: 1600px; */
+  max-width: 1600px;
   padding-right: 15px;
   padding-left: 15px;
   margin-left: auto;
@@ -895,8 +895,36 @@ section {
   text-align: center;
 }
 
-.footer-content {
-  margin-bottom: 60px;
+@media screen and (min-width: 768px) {
+  .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    text-align: start;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer-content {
+    margin-bottom: 60px;
+  }
 }
 
 .footer-logo {
@@ -951,13 +979,15 @@ section {
   letter-spacing: 0.03em;
 }
 
-.resources {
-  margin-bottom: 60px;
+@media screen and (max-width: 1199px) {
+  .resources {
+    margin-bottom: 60px;
+  }
 }
 
 .resources-title {
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   font-weight: bold;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -1031,9 +1061,22 @@ section {
   margin-top: 20px;
 }
 
+@media screen and (min-width: 1200px) {
+  .subscription-btns {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .subscription input {
   padding: 15px;
-  margin-right: 12px;
   font-size: 16px;
   line-height: 1.25;
   width: 450px;
@@ -1044,6 +1087,14 @@ section {
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription input {
+    width: 358px;
+    height: 50px;
+    margin-right: 12px;
+  }
 }
 
 .subscription input::-webkit-input-placeholder {
@@ -1130,6 +1181,12 @@ section {
   letter-spacing: 0.06em;
   color: #ffffff;
   cursor: pointer;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription button {
+    margin-top: 0;
+  }
 }
 
 .send {
