--- a/css/main.css
+++ b/css/main.css
@@ -1526,6 +1526,7 @@ header {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
+  z-index: 999;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 93px 15px;
@@ -1535,6 +1536,12 @@ header {
 @media screen and (min-width: 768px) {
   .backdrop {
     padding: 208px 159px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .backdrop {
+    padding: 0;
   }
 }
 
@@ -1548,8 +1555,12 @@ header {
           transform: translate(-50%, -50%) scale(0.9);
 }
 
+.modal-svg {
+  position: relative;
+}
+
 .modal {
-  min-width: 100%;
+  min-width: 450px;
   min-height: 581px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1559,6 +1570,7 @@ header {
 
 @media screen and (min-width: 768px) {
   .modal {
+    min-width: 450px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -1568,8 +1580,12 @@ header {
     transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    max-width: 450px;
-    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
   }
 }
 
@@ -1753,7 +1769,12 @@ textarea:focus {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 30px;
-  padding-left: 15px;
+}
+
+@media screen and (min-width: 1200px) {
+  .form-checkbox {
+    padding-left: 15px;
+  }
 }
 
 .check-box {
@@ -1780,12 +1801,20 @@ textarea:focus {
   cursor: pointer;
 }
 
-.check-box span {
-  font-weight: normal;
-  font-size: 14px;
+.check-text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+@media screen and (min-width: 1200px) {
+  .check-text {
+    font-size: 14px;
+  }
 }
 
 .form-link {
