--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -708,17 +708,16 @@ header {
 }
 
 .projects-container {
-  padding-top: 94px;
   border-top: 1px solid #ececec;
 }
 
 .buttons {
+  margin-bottom: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding-bottom: 56px;
 }
 
 @media screen and (min-width: 768px) {
@@ -729,6 +728,7 @@ header {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    margin-bottom: 56px;
   }
 }
 
@@ -759,12 +759,20 @@ header {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.buttons li {
+  margin-bottom: 30px;
+}
+
+.buttons li:nth-child(n + 4) {
+  margin-bottom: 0;
+}
+
 .buttons li:not(:last-child) {
   margin-right: 8px;
 }
 
 .projects {
-  margin: -15px;
+  display: block;
 }
 
 @media screen and (min-width: 768px) {
@@ -777,9 +785,39 @@ header {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .projects {
+    margin: -15px;
+  }
+}
+
 .project-card {
-  width: 370px;
-  /* flex-basis: calc(100% / 3-15px); */
+  margin-bottom: 30px;
+  width: 450px;
+}
+
+.project-card:last-child {
+  margin-bottom: 0;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .project-card {
+    width: 354px;
+    margin-right: 30px;
+  }
+  .project-card:nth-child(2n) {
+    margin-right: 0;
+  }
+  .project-card:last-child {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project-card {
+    width: 370px;
+    margin: 15px;
+  }
 }
 
 .project-info {
@@ -877,10 +915,6 @@ header {
   color: #757575;
   font-size: 16px;
   line-height: 1.88;
-}
-
-section {
-  padding-bottom: 94px;
 }
 
 .footer {
