--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -11,11 +11,13 @@
   text-align: center;
 
   @media screen and (min-width: 768px) {
+    width: 768px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
   }
   @media screen and (min-width: 1200px) {
+    width: 1200px;
     padding-top: 94px;
     padding-bottom: 94px;
     display: flex;
